fix down arrow styling on small landscape screens

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -421,8 +421,8 @@ Slideshow navigation
 }
 
 .slideshow__down-arrow {
-  width: 10vw;
-  height: 10vw;
+  width: 5rem;
+  height: 5rem;
   z-index: 20;
   position: fixed;
   bottom: 20vh;
@@ -476,6 +476,15 @@ desktop slideshow navigation available only for mouse users
   display: none;
 }
 
+@media (orientation: landscape) {
+  .slideshow__down-arrow {
+    width: 3rem;
+    height: 3rem;
+    bottom: 3vh;
+    left: calc(50% - 3vw);
+  }
+}
+
 @media (min-width: 825px) and (pointer: fine) {
   .slideshow-nav-mobile {
     display: none;
@@ -490,12 +499,6 @@ desktop slideshow navigation available only for mouse users
     margin: 0;
     padding: 0;
     z-index: 5;
-  }
-  .slideshow__down-arrow {
-    width: 3vw;
-    height: 3vw;
-    bottom: 3vh;
-    left: calc(50% - 3vw);
   }
   .slideshow__down-arrow--backwards {
     bottom: 8vh;
